[package]
name = "uf_rush"
authors = ["Kambiz Khojasteh"]
description = "A lock-free, thread-safe implementation of the Union-Find (Disjoint-Set) data structure."
version = "0.1.1"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/khojasteh/uf_rush"
documentation = "https://docs.rs/uf_rush/0.1.1"